repalce span tag with strong tag

--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
                 <div class="input-row_top">
                     <!-- ----------------input-top----------------- -->
                     <div class="input-group">
-                        <label class="form-label"><span>*</span> Họ và Tên</label>
+                        <label class="form-label"><strong>*</strong> Họ và Tên</label>
                         <input class="form-input" type="text" name="name-label" required placeholder="Nhập tên" />
-                        <label class="form-label"><span>*</span> Email</label>
+                        <label class="form-label"><strong>*</strong> Email</label>
                         <input class="form-input" type="email" name="email-label" required placeholder="Nhập email" />
                     </div>
                     <!-- --------------------------------- -->
                     <div class="input-group">
-                        <label class="form-label"><span>*</span> Ngày sinh</label>
+                        <label class="form-label"><strong>*</strong> Ngày sinh</label>
                         <input class="form-input" type="date" name="date-label" required />
-                        <label class="form-label"><span>*</span> Số CMND/CCCD</label>
+                        <label class="form-label"><strong>*</strong> Số CMND/CCCD</label>
                         <input class="form-input" type="text" name="number-label" required
                             placeholder="Nhập số CMND/CCCD" />
                     </div>
                     <!-- --------------------------------- -->
                     <div class="input-group">
-                        <label class="form-label"><span>*</span> Số điện thoại</label>
+                        <label class="form-label"><strong>*</strong> Số điện thoại</label>
                         <div class="phone-input">
-                            <span class="country-icon">
+                            <strong class="country-icon">
                                 <img src="./image/vietnam.png" alt="vietnam" class="form-img_national">
-                            </span>
+                            </strong>
                             <select class="country-code">
                                 <option selected>+84</option>
                                 <!-- Các tùy chọn mã vùng khác -->
@@ -60,11 +60,11 @@
                 <!-- ----------------input-below------------------ -->
                 <div class="input-row_below">
                     <div class="input-group_below">
-                        <label class="form-label"><span>*</span> Địa chỉ</label>
+                        <label class="form-label"><strong>*</strong> Địa chỉ</label>
                         <select name="" class="form-select" id="">
                             <option disabled selected value>Tỉnh/Thành phố, Quận/Huyện, Phường/Xã</option>
                         </select>
-                        <label class="form-label"><span>*</span> Chuyên môn</label>
+                        <label class="form-label"><strong>*</strong> Chuyên môn</label>
                         <select name="" class="form-select" id="">
                             <option disabled selected value>Nhập để tìm chọn loại chuyên môn</option>
                         </select>
@@ -84,13 +84,13 @@
                     <h5 class="form-description_payment">Thông tin thanh toán</h5>
                     <div class="input-row_payment">
                         <div class="input-group_payment">
-                            <label class="form-label_payment"><span>*</span> Ngân hàng</label>
+                            <label class="form-label_payment"><strong>*</strong> Ngân hàng</label>
                             <select name="" class="form-select" id="">
                                 <option disabled selected value>Nhập để tìm chọn ngân hàng</option>
                             </select>
                         </div>
                         <div class="input-group_payment">
-                            <label class="form-label_payment"><span>*</span> Số thẻ</label>
+                            <label class="form-label_payment"><strong>*</strong> Số thẻ</label>
                             <select name="" class="form-select" id="">
                                 <option disabled selected value> Nhập số thẻ</option>
                             </select>
